chore: live sass by-product

--- a/homepage/component/tip-calculator-app-main/styles/main.css
+++ b/homepage/component/tip-calculator-app-main/styles/main.css
@@ -143,7 +143,7 @@ input:focus {
   display: -ms-grid;
   display: grid;
   gap: 0.7rem;
-  -ms-grid-columns: (1fr);
+  -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: 40px;
       grid-template-rows: 40px;
@@ -253,6 +253,12 @@ input:focus {
   font-size: 36px;
   font-weight: 700;
   color: var(--primary-color);
+  max-width: 140px;
+  overflow: scroll;
+}
+
+.result-amount::-webkit-scrollbar {
+  display: none;
 }
 
 .reset-btn {
@@ -276,7 +282,7 @@ input:focus {
 
 @media (max-width: 700px) {
   .logo {
-    margin: 4rem 0;
+    margin: 4rem;
   }
   .calculator {
     -webkit-box-orient: vertical;
@@ -294,10 +300,10 @@ input:focus {
     min-height: 200px;
   }
   .select-tip .selects {
-    -ms-grid-columns: (1fr);
+    -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
-    -ms-grid-rows: (40px);
+    -ms-grid-rows: (40px)[3];
         grid-template-rows: repeat(3, 40px);
   }
 }
