fix:  output layout with number longer get to lengthen

--- a/homepage/component/tip-calculator-app-main/styles/main.scss
+++ b/homepage/component/tip-calculator-app-main/styles/main.scss
@@ -220,6 +220,11 @@ input {
     font-size: 36px;
     font-weight: 700;
     color: var(--primary-color);
+    max-width:140px;
+    overflow:scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
 
