--- a/homepage/component/FAQ-component/index.html
+++ b/homepage/component/FAQ-component/index.html
@@ -38,7 +38,7 @@
             <button class="accordion__question">
               How many team members can I invite?
               <picture class="accordion__arrow">
-                <img src="./images/icon-arrow-down.svg" alt="arrow" />
+                <img src="./images/icon-arrow-down.svg" />
               </picture>
             </button>
             <div class="accordion__answer">
@@ -53,7 +53,7 @@
             <button class="accordion__question">
               What is the maximum file upload size?
               <picture class="accordion__arrow">
-                <img src="./images/icon-arrow-down.svg" alt="arrow" />
+                <img src="./images/icon-arrow-down.svg" />
               </picture>
             </button>
             <div class="accordion__answer">
@@ -68,7 +68,7 @@
             <button class="accordion__question">
               How do I reset my password?
               <picture class="accordion__arrow">
-                <img src="./images/icon-arrow-down.svg" alt="arrow" />
+                <img src="./images/icon-arrow-down.svg" />
               </picture>
             </button>
             <div class="accordion__answer">
@@ -83,7 +83,7 @@
             <button class="accordion__question">
               Can I cancel my subscription?
               <picture class="accordion__arrow">
-                <img src="./images/icon-arrow-down.svg" alt="arrow" />
+                <img src="./images/icon-arrow-down.svg" />
               </picture>
             </button>
             <div class="accordion__answer">
@@ -98,7 +98,7 @@
             <button class="accordion__question">
               Do you provide additional support?
               <picture class="accordion__arrow">
-                <img src="./images/icon-arrow-down.svg" alt="arrow" />
+                <img src="./images/icon-arrow-down.svg" />
               </picture>
             </button>
             <div class="accordion__answer">
