--- a/homepage/website03/assets/default.css
+++ b/homepage/website03/assets/default.css
@@ -44,14 +44,21 @@ body {
   width: 100%;
   height: 30vh;
   z-index: -1;
+  border-radius: 0 0 20px 20px;
 }
 
 .header {
   height: 100px;
 }
 
+.header h3,
+.header h6 {
+  font-weight: 700;
+}
+
 .header-theme {
-  height: 30px;
+  position: relative;
+  top: 10px;
 }
 
 .main .card,
@@ -173,5 +180,20 @@ body {
 @media (min-width: 768px) {
   .header-theme {
     width: auto !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .top-bg {
+    height: 40vh;
+  }
+
+  .header {
+    height: 140px;
+  }
+
+  .header-theme {
+    border-top: 1px solid var(--mainText);
+    padding: 20px 0;
   }
 }
