--- a/homepage/website03/assets/main.css
+++ b/homepage/website03/assets/main.css
@@ -14,6 +14,10 @@
   --heading: #ffffff;
 }
 
+.attribution {
+  color: var(--heading);
+}
+
 .increase {
   color: var(--lime-green);
 }
@@ -46,14 +50,21 @@ body {
   width: 100%;
   height: 30vh;
   z-index: -1;
+  border-radius: 0 0 20px 20px;
 }
 
 .header {
   height: 100px;
 }
 
+.header h3,
+.header h6 {
+  font-weight: 700;
+}
+
 .header-theme {
-  height: 30px;
+  position: relative;
+  top: 10px;
 }
 
 .main .card,
@@ -169,6 +180,19 @@ body {
 @media (min-width: 768px) {
   .header-theme {
     width: auto !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .top-bg {
+    height: 40vh;
+  }
+  .header {
+    height: 140px;
+  }
+  .header-theme {
+    border-top: 1px solid var(--mainText);
+    padding: 20px 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
