--- a/homepage/website03/assets/main.scss
+++ b/homepage/website03/assets/main.scss
@@ -17,6 +17,11 @@
   --heading: #ffffff;
 }
 
+
+.attribution {
+  color: var(--heading);
+}
+
 // color class
 .increase {
   color: var(--lime-green);
@@ -50,14 +55,21 @@ body {
   width: 100%;
   height: 30vh;
   z-index: -1;
+  border-radius: 0 0 20px 20px;
 }
 
 .header {
   height: 100px;
+
+  h3,
+  h6 {
+    font-weight: 700;
+  }
 }
 
 .header-theme {
-  height: 30px;
+  position: relative;
+  top: 10px;
 }
 
 .main .card,
@@ -119,7 +131,11 @@ body {
 
 // Tweak these to change the style of the toggle
 $toggle-background-color-on: hsl(230, 22%, 74%);
-$toggle-background-color-off: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+$toggle-background-color-off: linear-gradient(
+  90deg,
+  hsl(210, 78%, 56%),
+  hsl(146, 68%, 55%)
+);
 
 $toggle-control-on-color: white;
 $toggle-control-off-color: var(--body-bg);
@@ -188,5 +204,20 @@ $toggle-control-size: $toggle-height - ($toggle-gutter * 2);
 @media (min-width: 768px) {
   .header-theme {
     width: auto !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .top-bg {
+    height: 40vh;
+  }
+
+  .header {
+    height: 140px;
+  }
+
+  .header-theme {
+    border-top: 1px solid var(--mainText);
+    padding: 20px 0;
   }
 }
