--- a/frontendmentor/component/four-card-feature-section-master/styles/main.scss
+++ b/frontendmentor/component/four-card-feature-section-master/styles/main.scss
@@ -131,12 +131,12 @@ main {
 
 @media (max-width: 1240px) {
   .container {
-    grid-template-columns: 1fr;
+    max-width:670px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
-      "a"
-      "b"
-      "c"
-      "d";
+      "a b"
+      "c d";
   }
 
   main {
@@ -168,5 +168,16 @@ main {
     justify-self: center;
     max-width: 330px;
     padding: 2rem;
+  }
+}
+
+@media (max-width: 720px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "a"
+      "b"
+      "c"
+      "d";
   }
 }
