modify more media queries size

--- a/frontendmentor/component/time-tracking-dashboard-main/styles/main.css
+++ b/frontendmentor/component/time-tracking-dashboard-main/styles/main.css
@@ -240,7 +240,54 @@ body {
   background-color: #ffffff;
 }
 
-@media (max-width: 1170px) {
+@media (max-width: 1200px) {
+  .dashboard {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .user {
+    width: 100%;
+  }
+  .user__info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 1.5rem;
+  }
+  .user__controls {
+    height: 100px;
+    padding: 1rem 2.2rem 0 2.2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .user__control {
+    text-align: center;
+  }
+}
+
+@media (max-width: 900px) {
+  .cards {
+    -ms-grid-columns: (260px)[2];
+        grid-template-columns: repeat(2, 260px);
+    -ms-grid-rows: (minmax(250px, auto))[3];
+        grid-template-rows: repeat(3, minmax(250px, auto));
+  }
+}
+
+@media (max-width: 600px) {
   .dashboard {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -256,31 +303,11 @@ body {
     max-width: 350px;
     width: 100%;
   }
-  .user__info {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: 1.5rem;
-  }
   .user__name {
     margin-top: 0;
   }
   .user__name span {
     font-size: 1.6rem;
-  }
-  .user__controls {
-    height: 100px;
-    padding: 1rem 2.2rem 0 2.2rem;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .user__control {
-    text-align: center;
   }
   .cards {
     -ms-grid-columns: minmax(350px, auto);
