--- a/frontendmentor/component/time-tracking-dashboard-main/styles/main.scss
+++ b/frontendmentor/component/time-tracking-dashboard-main/styles/main.scss
@@ -125,7 +125,7 @@ body {
   &__background {
     width: 100%;
     height: 100px;
-    border-radius:var(--border-radius) var(--border-radius) 0 0;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
   }
 
   &:nth-child(1) &__background {
@@ -154,7 +154,8 @@ body {
   }
 
   &:nth-child(6) &__background {
-    background: url(../images/icon-self-care.svg) no-repeat, var(--primary-yellow);
+    background: url(../images/icon-self-care.svg) no-repeat,
+      var(--primary-yellow);
     background-position: 90% -50%;
   }
 
@@ -215,7 +216,41 @@ body {
   }
 }
 
-@media (max-width: 1170px) {
+@media (max-width: 1200px) {
+  .dashboard {
+    flex-direction: column;
+  }
+
+  .user {
+    width: 100%;
+    &__info {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+
+    &__controls {
+      height: 100px;
+      padding: 1rem 2.2rem 0 2.2rem;
+      justify-content: center;
+      flex-direction: row;
+    }
+
+    &__control {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width:900px) {
+  .cards {
+    grid-template-columns: repeat(2, 260px);
+    grid-template-rows: repeat(3, minmax(250px, auto));
+  }
+}
+
+@media (max-width: 600px) {
   .dashboard {
     flex-direction: column;
     align-items: center;
@@ -227,27 +262,11 @@ body {
     max-width: 350px;
     width: 100%;
 
-    &__info {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-    }
-
     &__name {
       margin-top: 0;
       span {
         font-size: 1.6rem;
       }
-    }
-
-    &__controls {
-      height: 100px;
-      padding: 1rem 2.2rem 0 2.2rem;
-      flex-direction: row;
-    }
-
-    &__control {
-      text-align: center;
     }
   }
 
@@ -258,7 +277,7 @@ body {
 
   .card {
     &__wrapper {
-      top:22%;
+      top: 22%;
     }
 
     &__heading {
