--- a/frontendmentor/website03/assets/default.css
+++ b/frontendmentor/website03/assets/default.css
@@ -12,7 +12,6 @@
   --card-bg: hsl(227, 47%, 96%);
   --body-bg: hsl(0, 0%, 100%);
   --top-bg: hsl(225, 100%, 98%);
-
   --heading: #000000;
 }
 
@@ -36,15 +35,18 @@ body {
   background-color: var(--body-bg);
   font-family: "Inter", sans-serif;
   font-size: 14px;
+  transition: background-color 0.25s cubic-bezier(0.3, 0.05, 0.25, 1),
+    color 0.25s cubic-bezier(0.3, 0.05, 0.25, 1);
 }
 
 .top-bg {
-  background: var(--top-bg);
+  background-color: var(--top-bg);
   position: absolute;
   width: 100%;
   height: 30vh;
   z-index: -1;
   border-radius: 0 0 20px 20px;
+  transition: 250ms;
 }
 
 .header {
