--- a/frontendmentor/website03/assets/main.css
+++ b/frontendmentor/website03/assets/main.css
@@ -42,15 +42,19 @@ body {
   background-color: var(--body-bg);
   font-family: "Inter", sans-serif;
   font-size: 14px;
+  -webkit-transition: background-color 250ms cubic-bezier(0.3, 0.05, 0.25, 1), color 250ms cubic-bezier(0.3, 0.05, 0.25, 1);
+  transition: background-color 250ms cubic-bezier(0.3, 0.05, 0.25, 1), color 250ms cubic-bezier(0.3, 0.05, 0.25, 1);
 }
 
 .top-bg {
-  background: var(--top-bg);
+  background-color: var(--top-bg);
   position: absolute;
   width: 100%;
   height: 30vh;
   z-index: -1;
   border-radius: 0 0 20px 20px;
+  -webkit-transition: background-color 250ms;
+  transition: background-color 250ms;
 }
 
 .header {
