--- a/frontendmentor/website03/assets/main.scss
+++ b/frontendmentor/website03/assets/main.scss
@@ -13,10 +13,8 @@
   --card-bg: hsl(228, 28%, 20%);
   --body-bg: hsl(230, 17%, 14%);
   --top-bg: hsl(232, 19%, 15%);
-
   --heading: #ffffff;
 }
-
 
 .attribution {
   color: var(--heading);
@@ -47,15 +45,18 @@ body {
   background-color: var(--body-bg);
   font-family: "Inter", sans-serif;
   font-size: 14px;
+  transition: background-color 250ms cubic-bezier(0.3, 0.05, 0.25, 1),
+    color 250ms cubic-bezier(0.3, 0.05, 0.25, 1);
 }
 
 .top-bg {
-  background: var(--top-bg);
+  background-color: var(--top-bg);
   position: absolute;
   width: 100%;
   height: 30vh;
   z-index: -1;
   border-radius: 0 0 20px 20px;
+  transition: background-color 250ms;
 }
 
 .header {
