feat: handle mobile layout

--- a/frontendmentor/huddle-landing-page-with-single-introductory-section-master/styles/main.css
+++ b/frontendmentor/huddle-landing-page-with-single-introductory-section-master/styles/main.css
@@ -15,12 +15,11 @@
 
 body {
   background: url(../images/bg-desktop.svg) no-repeat, var(--primary-purple);
-  background-size: 100%;
+  background-size: cover;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 5vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -41,7 +40,7 @@ main {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding-top: 5rem;
+  padding-top: 6rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,7 +57,10 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 3rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 5rem;
 }
 
 .logo img {
@@ -74,9 +76,11 @@ main {
 
 .feature-pic img {
   width: 100%;
+  max-width: 880px;
 }
 
 .feature-text {
+  padding-top: 3.3rem;
   max-width: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -85,19 +89,21 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 2rem;
 }
 
 .heading {
   color: #ffffff;
   font-family: "Open Sans", sans-serif;
-  font-size: 2.6rem;
+  font-size: 2.4rem;
   line-height: 1.6;
+  letter-spacing: 1.1px;
+  margin-bottom: 1.6rem;
 }
 
 .description {
   color: #ffffff;
   font-weight: 400;
+  margin-bottom: 2rem;
 }
 
 .cta-btn {
@@ -105,14 +111,14 @@ main {
   color: var(--primary-purple);
   font-weight: 400;
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-size: 1.1rem;
   border: 0;
-  width: 12rem;
-  height: 3rem;
+  width: 13rem;
+  height: 3.6rem;
   border-radius: 50px;
   cursor: pointer;
-  -webkit-box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 2px 6px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 2px 6px 10px rgba(0, 0, 0, 0.3);
   -webkit-transition: 150ms;
   transition: 150ms;
   -webkit-transform: translateY(0px);
@@ -187,12 +193,14 @@ main {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    gap: 2rem;
   }
   .feature-pic img {
     max-width: 600px;
     width: 100%;
   }
   .feature-text {
+    max-width: 600px;
     text-align: center;
     gap: 1.2rem;
   }
@@ -214,8 +222,30 @@ main {
   body {
     background: url(../images/bg-mobile.svg) no-repeat, var(--primary-purple);
     background-position: 50% 0%;
-    background-size: 100%;
-    padding: 0 1.6rem;
+    background-size: 102%;
+  }
+  header {
+    padding-top: 2rem;
+  }
+  .logo img {
+    max-width: 150px;
+  }
+  main {
+    padding-top: 3.5rem;
+  }
+  .feature-pic img {
+    max-width: 600px;
+    padding: 0 0.5rem;
+  }
+  .heading {
+    padding: 0 0.5rem;
+  }
+  .cta-btn {
+    width: 14rem;
+    height: 2.8rem;
+    font-size: 0.85rem;
+    -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
+            box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
   }
 }
 /*# sourceMappingURL=main.css.map */
