--- a/frontendmentor/huddle-landing-page-with-single-introductory-section-master/styles/main.scss
+++ b/frontendmentor/huddle-landing-page-with-single-introductory-section-master/styles/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 :root {
   --primary-purple: #674baf;
   --primary-pink: #e882e8;
@@ -16,9 +16,9 @@
 body {
   background: url(../images/bg-desktop.svg) no-repeat, var(--primary-purple);
   background-size: cover;
+  background-position: 50% 67%;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
-  // max-width: 1440px;
   margin: 0 auto;
   padding: 0 5vw;
   display: flex;
@@ -40,8 +40,8 @@ main {
 
 .container {
   display: flex;
-  justify-content: space-between;
-  gap: 5rem;
+  // justify-content: space-between;
+  gap: 0rem;
 }
 
 .logo img {
@@ -50,17 +50,18 @@ main {
 }
 
 .feature-pic {
-  flex: 1;
+  width: 54%;
 
   img {
     width: 100%;
-    max-width: 880px;
+    max-width: 900px;
   }
 }
 
 .feature-text {
+  flex-grow: 1;
+  padding-left: 2rem;
   padding-top: 3.3rem;
-  max-width: 500px;
   display: flex;
   flex-direction: column;
 }
@@ -72,12 +73,15 @@ main {
   line-height: 1.6;
   letter-spacing: 1.1px;
   margin-bottom: 1.6rem;
+  max-width: 500px;
 }
 
 .description {
   color: #ffffff;
-  font-weight: 400;
+  font-weight: 300;
   margin-bottom: 2rem;
+  font-size: 1.1rem;
+  max-width: 550px;
 }
 
 .cta-btn {
@@ -88,7 +92,7 @@ main {
   font-size: 1.1rem;
   border: 0;
   width: 13rem;
-  height: 3.6rem;
+  height: 3.4rem;
   border-radius: 50px;
   cursor: pointer;
   box-shadow: 2px 6px 10px rgba(0, 0, 0, 0.3%);
@@ -142,25 +146,43 @@ main {
 }
 
 @media (max-width: 1200px) {
+  main {
+    padding-top: 3.5rem;
+  }
+
   .container {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
   }
 
-  .feature-pic img {
-    max-width: 600px;
+  .feature-pic {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      max-width: 600px;
+      width: 100%;
+    }
   }
 
   .feature-text {
     max-width: 600px;
     text-align: center;
     gap: 1.2rem;
+    padding-top: 1rem;
   }
 
   .heading {
     font-size: 1.6rem;
+    margin-bottom: 0;
+  }
+
+  .description {
+    padding: 0 0.7rem;
+    margin-bottom: 0.5rem;
   }
 
   .cta-btn {
@@ -186,10 +208,6 @@ main {
 
   .logo img {
     max-width: 150px;
-  }
-
-  main {
-    padding-top: 3.5rem;
   }
 
   .feature-pic img {
