--- a/frontendmentor/component/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/frontendmentor/component/fylo-landing-page-with-two-column-layout-master/index.html
@@ -26,10 +26,10 @@
     </style>
   </head>
   <body>
-    <div class="root">
+    
       <header class="header">
         <div class="header__wrapper">
-          <a class="header__logo">
+          <a class="header__logo" href="#">
             <img src="./images/logo.svg" alt="logo" />
           </a>
           <ul class="header__navigation">
@@ -39,7 +39,7 @@
           </ul>
         </div>
       </header>
-      <main>
+     
         <section class="feature section" id="features">
           <div class="feature__wrapper">
             <div class="feature__content">
@@ -52,48 +52,62 @@
                 and co-workers.
               </p>
               <div class="feature__cta">
-                <input type="text" class="feature__cta-input" placeholder="Enter your email..." />
+                <div class="feature__cta-input">
+                  <input type="text" placeholder="Enter your email..." />
+                  <p style="visibility:hidden;">Please check your email</p>
+                </div>
+                
                 <button class="feature__cta-button">Get Started</button>
               </div>
             </div>
-            <div class="feature__pic"></div>
+            <div class="feature__pic">
+              <img src="./images/illustration-1.svg" alt="">
+            </div>
           </div>
         </section>
   
-        <section class="team section" id="team">
-          <div class="team__content">
-            <h1 class="team__heading heading">Stay productive, wherever you are</h1>
-            <div class="team__description">
-              Never let location be an issue when accessing your files. Fylo has
-              you covered for all of your file storage needs.
-              <br />
-              <br />
-              Securely share files and folders with friends, family and colleagues
-              for live collaboration. No email attachments required!
-            </div>
-            <button class="team__button">
-              See how Fylo works
-              <img src="./images/icon-arrow.svg" alt="" />
-            </button>
-  
-            <div class="team__card">
-              <p class="team__card-text">
-                Fylo has improved our team productivity by an order of magnitude.
-                Since making the switch our team has become a well-oiled
-                collaboration machine.
-              </p>
-                <div class="team__card-testimonial">
-                  <div class="team__card-avatar">
-                    <img src="./images/avatar-testimonial.jpg" alt="" />
-                  </div>
-                  <div class="team__card-name">
-                    <strong>Kyle Burton</strong>
-                    <small>Founder & CEO, Huddle</small>
+        <section class="team" id="team">
+          <div class="team__bg">
+            <img src="./images/bg-curve-desktop.svg" alt="">
+          </div>
+          <div class="team__wrapper">
+            <div class="team__container">
+              <div class="team__content">
+                <h1 class="team__heading heading">Stay productive, wherever you are</h1>
+                <div class="team__description">
+                  Never let location be an issue when accessing your files. Fylo has
+                  you covered for all of your file storage needs.
+                  <br />
+                  <br />
+                  Securely share files and folders with friends, family and colleagues
+                  for live collaboration. No email attachments required!
+                </div>
+                <button class="team__button">
+                  See how Fylo works
+                  <img src="./images/icon-arrow.svg" alt="" />
+                </button>
+
+                <div class="team__card">
+                  <p class="team__card-text">
+                    Fylo has improved our team productivity by an order of magnitude.
+                    Since making the switch our team has become a well-oiled
+                    collaboration machine.
+                  </p>
+                    <div class="team__card-testimonial">
+                      <div class="team__card-avatar">
+                        <img src="./images/avatar-testimonial.jpg" alt="" />
+                      </div>
+                      <div class="team__card-name">
+                        <strong>Kyle Burton</strong>
+                        <small>Founder & CEO, Huddle</small>
+                      </div>
+                    </div>
                   </div>
                 </div>
+              <div class="team__pic">
+                <img src="./images/illustration-2.svg" alt="">
               </div>
             </div>
-          <div class="team__pic"></div>
           </div>
         </section>
   
@@ -108,42 +122,105 @@
               </div>
             </div>
             <div class="signin__cta">
-              <input type="text" class="hero__cta-input" placeholder="Enter your email..." />
-              <button class="hero__cta-button">Get Started</button>
+              <div class="signin__cta-input">
+                <input type="text" placeholder="Enter your email..." />
+                <p style="visibility:hidden;">Please check your email</p>
+              </div>
+              <button class="signin__cta-button">Get Started For Free</button>
             </div>
           </div>
         </section>
   
         <section class="footer">
-          <div class="footer__information">
-            <div class="footer__logo">
+          <div class="footer__wrapper">
+            <a class="footer__logo" href="#">
               <svg width="166" height="49" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><path id="a" d="M.014.03h93.96v48.29H.015z"/></defs><g fill="none" fill-rule="evenodd"><path d="M0 14.13v.123l27.95 13.13L56 14.209v-.033L27.95 1 0 14.13zm10.077.062L27.95 5.795l17.877 8.397-17.877 8.396-17.874-8.396zM27.95 32.483L0 19.55v4.784l27.95 12.964L56 24.289v-4.784L27.95 32.483zm0 9.703L0 29.25v4.783L27.95 47 56 33.99v-4.784l-28.05 12.98z" fill="#fff"/><g transform="translate(72)"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><path d="M87.56 24.152a8.1 8.1 0 0 0-2.161-5.573 7.259 7.259 0 0 0-2.34-1.673 6.864 6.864 0 0 0-2.85-.601c-1.01 0-1.961.2-2.852.601a7.257 7.257 0 0 0-2.34 1.673 8.102 8.102 0 0 0-2.16 5.574 8.102 8.102 0 0 0 2.16 5.573 7.257 7.257 0 0 0 2.34 1.672 6.864 6.864 0 0 0 2.851.602c1.01 0 1.96-.2 2.852-.602a7.259 7.259 0 0 0 2.339-1.672 8.1 8.1 0 0 0 2.16-5.574zm6.415 0c0 1.932-.357 3.723-1.07 5.373a13.098 13.098 0 0 1-2.94 4.28c-1.247 1.205-2.71 2.156-4.388 2.854-1.678.699-3.468 1.048-5.369 1.048-1.9 0-3.683-.349-5.346-1.048a13.863 13.863 0 0 1-4.366-2.876 13.351 13.351 0 0 1-2.94-4.302c-.713-1.65-1.07-3.426-1.07-5.329 0-1.873.364-3.634 1.092-5.284a13.92 13.92 0 0 1 2.962-4.325 13.671 13.671 0 0 1 4.367-2.898 13.552 13.552 0 0 1 5.301-1.048c1.901 0 3.69.35 5.369 1.048 1.678.698 3.14 1.65 4.388 2.854 1.248 1.204 2.228 2.638 2.94 4.302.713 1.665 1.07 3.449 1.07 5.351zM64.258 36.905a8.6 8.6 0 0 1-1.715.58c-.638.148-1.3.222-1.982.222a9.84 9.84 0 0 1-2.74-.379 6.003 6.003 0 0 1-2.295-1.226c-.653-.565-1.173-1.3-1.56-2.207-.385-.907-.578-2-.578-3.277V.029h6.549v29.474c0 1.07.215 1.806.646 2.207.43.401.943.602 1.537.602.742 0 1.455-.223 2.138-.669v5.262zM50.492 11.22L38.908 41.854c-.861 2.289-1.99 3.939-3.386 4.95-1.396 1.01-3.06 1.515-4.99 1.515-.297 0-.623-.022-.98-.066a7.352 7.352 0 0 1-1.025-.201l-2.138-5.975a8.486 8.486 0 0 0 1.56.557c.534.134 1.039.201 1.514.201 1.01 0 1.93-.23 2.762-.691.832-.46 1.47-1.315 1.916-2.564l.891-2.586-9.935-25.773h6.995l5.925 16.588 5.57-16.588h6.905zM23.538 7.342H6.786v8.294h16.529v5.618H6.785v15.784H.015V1.412h23.524v5.93z" fill="#fff" mask="url(#b)"/></g></g></svg>
-            </div>
-            <div class="footer__phone">
-              <img src="./images/icon-phone.svg" alt="" />
-              Phone: +1-543-123-4567
-            </div>
-            <div class="footer__email">
-              <img src="./images/icon-email.svg" alt="" />
-              example@fylo.com
-            </div>
-          </div>
+            </a>
+            <div class="footer__content">
+              <div class="footer__information"> 
+                <div class="footer__phone">
+                  <img src="./images/icon-phone.svg" alt="" />
+                  Phone: +1-543-123-4567
+                </div>
+                <div class="footer__email">
+                  <img src="./images/icon-email.svg" alt="" />
+                  example@fylo.com
+                </div>
+              </div>
+      
+              <nav class="footer__navigation">
+                <div class="footer__list">
+                  <ul>
+                    <li class="footer__link"><a href="#">About Us</a></li>
+                    <li class="footer__link"><a href="#">Jobs</a></li>
+                    <li class="footer__link"><a href="#">Press</a></li>
+                    <li class="footer__link"><a href="#">Blog</a></li>
+                  </ul>
+                </div>
+        
+                <div class="footer__list">
+                  <ul>
+                    <li><a class="footer__link" href="#">Contact Us</a></li>
+                    <li><a class="footer__link" href="#">Terms</a></li>
+                    <li><a class="footer__link" href="#">Privacy</a></li>
+                  </ul>
+                </div>
+              </nav>
   
-          <div class="footer__list">
-            <h1 class="footer__title">About Us</h1>
-            <ul>
-              <li class="footer__link"><a href="#">Jobs</a></li>
-              <li class="footer__link"><a href="#">Press</a></li>
-              <li class="footer__link"><a href="#">Blog</a></li>
-            </ul>
-          </div>
-  
-          <div class="footer__list">
-            <h1 class="footer__title">Contact Us</h1>
-            <ul>
-              <li class="footer__link"><a href="#">Terms</a></li>
-              <li class="footer__link"><a href="#">Privacy</a></li>
-            </ul>
+              <div class="social-links">
+                <a href="https://www.facebook.com/" class="link-facebook">
+                  <svg
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="512"
+                    height="512"
+                    viewBox="0 0 512 512"
+                  >
+                    <title></title>
+                    <g id="icomoon-ignore"></g>
+                    <path
+                      d="M304 96h80v-96h-80c-61.757 0-112 50.243-112 112v48h-64v96h64v256h96v-256h80l16-96h-96v-48c0-8.673 7.327-16 16-16z"
+                    ></path>
+                  </svg>
+                </a>
+                <a href="https://twitter.com/" class="link-twitter">
+                  <svg
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="512"
+                    height="512"
+                    viewBox="0 0 512 512"
+                  >
+                    <title></title>
+                    <g id="icomoon-ignore"></g>
+                    <path
+                      d="M512 113.2c-18.8 8.4-39.1 14-60.3 16.5 21.7-13 38.3-33.6 46.2-58.1-20.3 12-42.8 20.8-66.7 25.5-19.2-20.4-46.5-33.1-76.7-33.1-58 0-105 47-105 105 0 8.2 0.9 16.2 2.7 23.9-87.3-4.4-164.7-46.2-216.5-109.8-9 15.5-14.2 33.6-14.2 52.8 0 36.4 18.5 68.6 46.7 87.4-17.2-0.5-33.4-5.3-47.6-13.1 0 0.4 0 0.9 0 1.3 0 50.9 36.2 93.4 84.3 103-8.8 2.4-18.1 3.7-27.7 3.7-6.8 0-13.3-0.7-19.8-1.9 13.4 41.7 52.2 72.1 98.1 73-36 28.2-81.2 45-130.5 45-8.5 0-16.8-0.5-25.1-1.5 46.6 29.9 101.8 47.2 161.1 47.2 193.2 0 298.9-160.1 298.9-298.9 0-4.6-0.1-9.1-0.3-13.6 20.5-14.7 38.3-33.2 52.4-54.3z"
+                    ></path>
+                  </svg>
+                </a>
+                <a href="https://www.instagram.com/" class="link-instgram">
+                  <svg
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="512"
+                    height="512"
+                    viewBox="0 0 512 512"
+                  >
+                    <title></title>
+                    <g id="icomoon-ignore"></g>
+                    <path
+                      d="M256 46.1c68.4 0 76.5 0.3 103.4 1.5 25 1.1 38.5 5.3 47.5 8.8 11.9 4.6 20.5 10.2 29.4 19.1 9 9 14.5 17.5 19.2 29.4 3.5 9 7.7 22.6 8.8 47.5 1.2 27 1.5 35.1 1.5 103.4s-0.3 76.5-1.5 103.4c-1.1 25-5.3 38.5-8.8 47.5-4.6 11.9-10.2 20.5-19.1 29.4-9 9-17.5 14.5-29.4 19.2-9 3.5-22.6 7.7-47.5 8.8-27 1.2-35.1 1.5-103.4 1.5s-76.5-0.3-103.4-1.5c-25-1.1-38.5-5.3-47.5-8.8-11.9-4.6-20.5-10.2-29.4-19.1-9-9-14.5-17.5-19.2-29.4-3.5-9-7.7-22.6-8.8-47.5-1.2-27-1.5-35.1-1.5-103.4s0.3-76.5 1.5-103.4c1.1-25 5.3-38.5 8.8-47.5 4.6-11.9 10.2-20.5 19.1-29.4 9-9 17.5-14.5 29.4-19.2 9-3.5 22.6-7.7 47.5-8.8 26.9-1.2 35-1.5 103.4-1.5zM256 0c-69.5 0-78.2 0.3-105.5 1.5-27.2 1.2-45.9 5.6-62.1 11.9-16.9 6.6-31.2 15.3-45.4 29.6-14.3 14.2-23 28.5-29.6 45.3-6.3 16.3-10.7 34.9-11.9 62.1-1.2 27.4-1.5 36.1-1.5 105.6s0.3 78.2 1.5 105.5c1.2 27.2 5.6 45.9 11.9 62.1 6.6 16.9 15.3 31.2 29.6 45.4 14.2 14.2 28.5 23 45.3 29.5 16.3 6.3 34.9 10.7 62.1 11.9 27.3 1.2 36 1.5 105.5 1.5s78.2-0.3 105.5-1.5c27.2-1.2 45.9-5.6 62.1-11.9 16.8-6.5 31.1-15.3 45.3-29.5s23-28.5 29.5-45.3c6.3-16.3 10.7-34.9 11.9-62.1 1.2-27.3 1.5-36 1.5-105.5s-0.3-78.2-1.5-105.5c-1.2-27.2-5.6-45.9-11.9-62.1-6.3-17-15-31.3-29.3-45.5-14.2-14.2-28.5-23-45.3-29.5-16.3-6.3-34.9-10.7-62.1-11.9-27.4-1.3-36.1-1.6-105.6-1.6v0z"
+                    ></path>
+                    <path
+                      d="M256 124.5c-72.6 0-131.5 58.9-131.5 131.5s58.9 131.5 131.5 131.5 131.5-58.9 131.5-131.5c0-72.6-58.9-131.5-131.5-131.5zM256 341.3c-47.1 0-85.3-38.2-85.3-85.3s38.2-85.3 85.3-85.3c47.1 0 85.3 38.2 85.3 85.3s-38.2 85.3-85.3 85.3z"
+                    ></path>
+                    <path
+                      d="M423.4 119.3c0 16.955-13.745 30.7-30.7 30.7s-30.7-13.745-30.7-30.7c0-16.955 13.745-30.7 30.7-30.7s30.7 13.745 30.7 30.7z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
         </section>
       </main>
@@ -153,7 +230,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by <a href="https://github.com/yuenu">yuenu</a>.
         </p>
       </footer>
     </div>
