--- a/frontendmentor/component/fylo-landing-page-with-two-column-layout-master/styles/main.css
+++ b/frontendmentor/component/fylo-landing-page-with-two-column-layout-master/styles/main.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700;900&display=swap");
 :root {
   --color-blue-900: #070439;
-  --color-blue-400: #585989;
-  --color-blue-600: #3296f3;
   --color-blue-700: #3065f8;
-  --color-blue-800: #1341c0;
+  --color-blue-600: #3296f3;
+  --color-blue-500: #53acff;
+  --color-blue-400: #585989;
   --color-green: #3c9f8f;
   --color-gray-100: #f6f6fe;
   --color-gray-500: #bfbfbf;
@@ -46,12 +46,17 @@ body {
   color: var(--color-blue-900);
 }
 
-header {
-  padding: 0 8rem;
+.header {
+  margin: 0 auto;
+  width: calc(min(90%, 1400px));
 }
 
-.header {
-  padding: 0 8rem;
+.header__logo {
+  max-width: 150px;
+}
+
+.header__logo img {
+  width: 100%;
 }
 
 .header__wrapper {
@@ -89,8 +94,8 @@ header {
   /*width:0% height:2px*/
   background-repeat: no-repeat;
   /* Don't repeat !!*/
-  -webkit-transition: all 250ms 150ms;
-  transition: all 250ms 150ms;
+  -webkit-transition: all 250ms 50ms;
+  transition: all 250ms 50ms;
 }
 
 .header li:hover {
@@ -109,7 +114,8 @@ header {
 }
 
 .feature {
-  padding: 4rem 8rem;
+  width: calc(min(90%, 1400px));
+  margin: 3rem auto 0 auto;
 }
 
 .feature__wrapper {
@@ -128,7 +134,7 @@ header {
 }
 
 .feature__heading {
-  font-size: 3rem;
+  font-size: 2.5rem;
   line-height: 1.4;
   margin-bottom: 1rem;
 }
@@ -136,54 +142,79 @@ header {
 .feature__description {
   font-weight: 700;
   color: var(--color-blue-400);
-  font-size: 1.38rem;
+  font-size: 1.1rem;
   margin-bottom: 2rem;
+  max-width: 590px;
 }
 
 .feature__cta {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   gap: 1rem;
 }
 
-.feature__cta input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.feature__cta-input {
   width: 100%;
-  max-width: 25rem;
-  height: 3.5rem;
+  max-width: 20rem;
+}
+
+.feature__cta-input input {
+  width: 100%;
+  height: 3rem;
   padding: 0 1rem;
+  border-radius: 4px;
+  border: 1px solid #000;
 }
 
-.feature__cta input::-webkit-input-placeholder {
+.feature__cta-input input::-webkit-input-placeholder {
   color: var(--color-gray-500);
 }
 
-.feature__cta input:-ms-input-placeholder {
+.feature__cta-input input:-ms-input-placeholder {
   color: var(--color-gray-500);
 }
 
-.feature__cta input::-ms-input-placeholder {
+.feature__cta-input input::-ms-input-placeholder {
   color: var(--color-gray-500);
 }
 
-.feature__cta input::placeholder {
+.feature__cta-input input::placeholder {
   color: var(--color-gray-500);
+}
+
+.feature__cta-input input.error {
+  border-color: #f15b5b;
+}
+
+.feature__cta-input input.error:focus-visible {
+  outline-color: red;
+}
+
+.feature__cta-input p {
+  text-align: left;
+  font-weight: 400;
+  font-family: inherit;
+  font-size: 0.8rem;
+  margin-top: 3px;
+}
+
+.feature__cta-input p.error {
+  color: #f15b5b;
+}
+
+.feature__cta-input p.success {
+  color: var(--color-green);
 }
 
 .feature__cta button {
-  max-width: 15rem;
+  max-width: 12rem;
   width: 100%;
-  height: 3.5rem;
+  height: 3rem;
   background-color: var(--color-blue-700);
   border: 0;
   color: #ffffff;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: inherit;
   font-weight: 700;
   border-radius: 4px;
@@ -199,55 +230,55 @@ header {
 }
 
 .feature__cta button:active {
-  background-color: var(--color-blue-800);
+  background-color: var(--color-blue-500);
 }
 
 .feature__pic {
-  background: url(../images/illustration-1.svg) no-repeat;
-  background-size: contain;
-  width: 60rem;
-  height: 40rem;
+  width: 55%;
+}
+
+.feature__pic img {
+  width: 100%;
 }
 
 .team {
-  padding: 8rem;
+  margin-top: 12rem;
+}
+
+.team__bg img {
+  width: 100%;
+}
+
+.team__wrapper {
+  background-color: #f8f8fe;
+}
+
+.team__container {
+  padding: 4rem 0 8rem;
+  width: calc(min(90%, 1400px));
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 2rem;
-  position: relative;
-  background-color: #f8f8fe;
-  margin-top: 250px;
-}
-
-.team:before {
-  content: "";
-  background: url(../images/bg-curve-desktop.svg) no-repeat;
-  background-size: 100%;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: -100px;
-  left: 0;
-  z-index: -1;
-}
-
-.team__content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
 }
 
 .team__heading {
-  font-size: 3rem;
+  font-size: 2.6rem;
   margin-bottom: 2rem;
 }
 
 .team__description {
   font-weight: 700;
   color: var(--color-blue-400);
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-bottom: 1.3rem;
+  max-width: 500px;
 }
 
 .team__button {
@@ -258,8 +289,8 @@ header {
   font-weight: 700;
   font-family: inherit;
   font-size: 1rem;
-  border-bottom: 1px solid var(--color-green);
-  padding-bottom: 5px;
+  border-bottom: 2px solid var(--color-green);
+  padding-bottom: 3px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -270,14 +301,17 @@ header {
   cursor: pointer;
   -webkit-transition: 250ms;
   transition: 250ms;
+  outline-offset: 5px;
+  outline: 3px dashed transparent;
 }
 
 .team__button:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .team__button:active {
   opacity: 0.9;
+  outline-color: rgba(94, 202, 103, 0.5);
 }
 
 .team__card {
@@ -303,6 +337,7 @@ header {
   color: var(--color-blue-900);
   line-height: 2;
   margin-bottom: 1rem;
+  text-align: left;
 }
 
 .team__card-testimonial {
@@ -344,11 +379,11 @@ header {
 }
 
 .team__pic {
-  background: url(../images/illustration-2.svg) no-repeat;
-  background-size: contain;
-  background-position: 50% 50%;
-  width: 40rem;
-  height: 40rem;
+  width: 45%;
+}
+
+.team__pic img {
+  width: 100%;
 }
 
 .signin {
@@ -363,8 +398,12 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0 8rem;
-  gap: 10rem;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 8rem;
+  width: calc(min(90%, 1400px));
+  margin: 0 auto;
 }
 
 .signin__content {
@@ -380,6 +419,7 @@ header {
 .signin__description {
   color: var(--color-gray-100);
   font-size: 1.2rem;
+  max-width: 600px;
 }
 
 .signin__cta {
@@ -387,38 +427,65 @@ header {
   width: 100%;
 }
 
-.signin__cta input {
+.signin__cta-input input {
   width: 100%;
-  height: 3.2rem;
+  height: 3rem;
   padding: 0 1rem;
+  border-radius: 4px;
+  border: 1px solid #fff;
 }
 
-.signin__cta input::-webkit-input-placeholder {
+.signin__cta-input input::-webkit-input-placeholder {
   color: var(--color-gray-500);
 }
 
-.signin__cta input:-ms-input-placeholder {
+.signin__cta-input input:-ms-input-placeholder {
   color: var(--color-gray-500);
 }
 
-.signin__cta input::-ms-input-placeholder {
+.signin__cta-input input::-ms-input-placeholder {
   color: var(--color-gray-500);
 }
 
-.signin__cta input::placeholder {
+.signin__cta-input input::placeholder {
   color: var(--color-gray-500);
+}
+
+.signin__cta-input input.error {
+  border-color: #f15b5b;
+}
+
+.signin__cta-input input.error:focus-visible {
+  outline-color: red;
+}
+
+.signin__cta-input p {
+  text-align: left;
+  font-weight: 400;
+  font-family: inherit;
+  font-size: 0.8rem;
+  margin-top: 3px;
+}
+
+.signin__cta-input p.error {
+  color: #fff;
+}
+
+.signin__cta-input p.success {
+  color: #ffc46c;
 }
 
 .signin__cta button {
-  margin-top: 1rem;
-  max-width: 12rem;
+  margin-top: 0.8rem;
+  max-width: 13rem;
   width: 100%;
-  height: 3.2rem;
+  height: 3rem;
   background-color: var(--color-blue-700);
   border: 0;
   color: #ffffff;
   font-family: inherit;
   font-weight: 700;
+  font-size: 0.9rem;
   border-radius: 4px;
   -webkit-box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
@@ -432,17 +499,38 @@ header {
 }
 
 .signin__cta button:active {
-  background-color: var(--color-blue-800);
+  background-color: var(--color-blue-500);
 }
 
 .footer {
   background-color: var(--color-blue-900);
   color: var(--color-gray-100);
-  padding: 8rem;
+  padding: 8rem 0 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 10rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer__wrapper {
+  width: calc(min(90%, 1400px));
+  margin: 0 auto;
+}
+
+.footer__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  max-width: 1200px;
 }
 
 .footer__information {
@@ -457,6 +545,7 @@ header {
 
 .footer__logo {
   margin-bottom: 2rem;
+  display: inline-block;
 }
 
 .footer__phone {
@@ -472,5 +561,369 @@ header {
       -ms-flex-align: center;
           align-items: center;
   font-size: 1.1rem;
+}
+
+.footer__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10vw;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__list ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 1.4rem;
+}
+
+.footer__list ul a {
+  color: #ffffff;
+}
+
+.footer__list ul a:hover {
+  color: var(--color-blue-500);
+}
+
+.footer__list ul a:active {
+  color: var(--color-blue-600);
+}
+
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 1rem;
+  -webkit-transition: 250ms;
+  transition: 250ms;
+}
+
+.social-links a {
+  border-radius: 50%;
+  border: 1px solid #fff;
+  height: 36px;
+  width: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social-links a:hover {
+  border-color: var(--color-blue-500);
+}
+
+.social-links a:hover svg {
+  fill: var(--color-blue-500);
+}
+
+.social-links a:active {
+  border-color: var(--color-blue-600);
+}
+
+.social-links a:active svg {
+  fill: var(--color-blue-600);
+}
+
+.social-links a svg {
+  width: 16px;
+  height: 16px;
+  fill: #fff;
+}
+
+@media (max-width: 1200px) {
+  .header__logo {
+    width: 100%;
+    max-width: 130px;
+  }
+  .header__wrapper {
+    height: 8rem;
+  }
+  .header__navigation {
+    gap: 1.6rem;
+  }
+  .feature__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10vh;
+  }
+  .feature__pic {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    width: 65%;
+  }
+  .feature__content {
+    width: 70%;
+    padding-top: 0;
+    text-align: center;
+  }
+  .feature__description {
+    margin: 0 auto 2rem auto;
+  }
+  .feature__cta {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .team {
+    margin-top: 10rem;
+  }
+  .team__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10vh;
+  }
+  .team__content {
+    text-align: center;
+  }
+  .team__heading {
+    font-size: 2rem;
+  }
+  .team__description {
+    text-align: left;
+  }
+  .team__pic {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    width: 70%;
+  }
+  .team__button {
+    margin: 3rem auto 3rem auto;
+  }
+  .team__card {
+    margin: 0 auto;
+  }
+  .signin {
+    padding: 6rem 0;
+  }
+  .signin__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .signin__content {
+    width: 70%;
+    text-align: center;
+  }
+  .signin__heading {
+    font-size: 1.8rem;
+  }
+  .signin__description {
+    font-size: 1rem;
+  }
+  .signin__cta {
+    max-width: 70%;
+  }
+  .signin__cta button {
+    max-width: 100%;
+  }
+  .footer {
+    padding: 5rem 0 3rem;
+  }
+  .footer__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer__navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 3rem;
+  }
+  .footer__list ul {
+    gap: 0.8rem;
+  }
+  .social-links {
+    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 676px) {
+  .header__logo {
+    max-width: 90px;
+  }
+  .header__wrapper {
+    height: 6rem;
+  }
+  .header__navigation {
+    gap: 1.2rem;
+  }
+  .header__link {
+    font-size: 0.9rem;
+  }
+  .feature__heading {
+    font-size: 1.6rem;
+  }
+  .feature__description {
+    font-size: 0.9rem;
+    line-height: 1.6;
+    width: 95%;
+  }
+  .feature__pic {
+    width: 90%;
+  }
+  .feature__content {
+    width: 100%;
+  }
+  .feature__cta {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .feature__cta-input {
+    max-width: 95%;
+  }
+  .feature__cta button {
+    max-width: 95%;
+  }
+  .team {
+    margin-top: 6rem;
+  }
+  .team__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .team__pic {
+    width: 90%;
+  }
+  .team__heading {
+    font-size: 1.2rem;
+  }
+  .team__description {
+    font-size: 0.9rem;
+    line-height: 1.6;
+  }
+  .team__button {
+    font-size: 0.9rem;
+  }
+  .team__card {
+    padding: 2rem 1rem 2rem 1.3rem;
+  }
+  .team__card::before {
+    width: 20px;
+    height: 20px;
+  }
+  .team__card-text {
+    font-size: 0.85rem;
+  }
+  .team__card-testimonial {
+    text-align: left;
+  }
+  .team__card-avatar img {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  .team__card-name strong {
+    font-size: 0.95rem;
+  }
+  .team__card-name small {
+    font-size: 0.7rem;
+  }
+  .signin {
+    padding: 4rem 0 5rem;
+  }
+  .signin__wrapper {
+    gap: 2rem;
+  }
+  .signin__content {
+    width: 90%;
+  }
+  .signin__heading {
+    font-size: 1.3rem;
+  }
+  .signin__description {
+    line-height: 1.7;
+  }
+  .signin__cta {
+    max-width: 85%;
+  }
+  .signin__cta button {
+    font-size: 0.85rem;
+  }
+  .footer {
+    padding: 5rem 0 3rem;
+  }
+  .footer__navigation {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    gap: 5vh;
+  }
+  .footer__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 3.4rem;
+  }
+  .footer__list ul {
+    gap: 0.8rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
